--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
  									<li class="nav-item">
 										<a href="verification-process.html" class="nav-link">Lead Verification</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="roi-calculator.html" class="nav-link">ROI Calculator</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -109,7 +112,7 @@
 							</li>
 						</ul>
 						<div class="other-option">
-							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
 						</div>
 					</div>
 				</nav>
@@ -390,15 +393,17 @@
 
 					<div class="overview-content">
 
-						<h2>Grow your sales now</h2>
+						<h2>Unlimited, High Quality Sales Leads</h2>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>MegaPipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective cost (unlimited for a low monthly subscription cost).</p>
 
+						<p>Do the math yourself, or use our <a href="roi-calculator.html">ROI calculator</a> to help you see the potential.</p>
+
+						<div class="new-btn">
+
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
+
+						</div>
 					</div>
 
 				</div>
