--- a/training-support.html
+++ b/training-support.html
@@ -101,6 +101,9 @@
  									<li class="nav-item">
 										<a href="verification-process.html" class="nav-link">Lead Verification</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="roi-calculator.html" class="nav-link">ROI Calculator</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -108,7 +111,7 @@
 							</li>
 						</ul>
 						<div class="other-option">
-							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
 						</div>
 					</div>
 				</nav>
@@ -169,6 +172,16 @@
 								<div class="features-text">
 
 									<table id="support">
+										<thead>
+											<tr>
+												<th>Photo</th>
+												<th>Name</th>
+												<th>Experience</th>
+												<th>English Level</th>
+												<th>Location</th>
+												<th>Contact</th>
+											</tr>
+										</thead>
 										<tbody>
 											<tr>
 												<td>
@@ -176,12 +189,12 @@
 														<img src="assets/img/icon.png" alt="image">
 													</span>
 												</td>
-												<td>Cindy Ana Medrano</td>
-												<td>Exp. 7+ Years</td>
-												<td>High Fluency</td>
+												<td>Cindy Medrano</td>
+												<td>7+ Years</td>
+												<td>High</td>
 												<td>Philippines</td>
 												<td>
-													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+													<a class="default-btn" href="mailto:sales@megapipelines.com?subject=Dialing%20Support:%20Cindy%20Medrano">Contact</a>
 												</td>
 											</tr>
 											<tr>
@@ -191,11 +204,11 @@
 													</span>
 												</td>
 												<td>Angeli Labang</td>
-												<td>Exp. 7+ Years</td>
-												<td>High Fluency</td>
+												<td>7+ Years</td>
+												<td>High</td>
 												<td>Philippines</td>
 												<td>
-													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+													<a class="default-btn" href="mailto:sales@megapipelines.com?subject=Dialing%20Support:%20Angeli%20Labang">Contact</a>
 												</td>
 											</tr>
 											<tr>
@@ -205,11 +218,11 @@
 													</span>
 												</td>
 												<td>Angel Alindato</td>
-												<td>Exp. 7+ Years</td>
-												<td>High Fluency</td>
+												<td>7+ Years</td>
+												<td>High</td>
 												<td>Philippines</td>
 												<td>
-													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+													<a class="default-btn" href="mailto:sales@megapipelines.com?subject=Dialing%20Support:%20Angel%20Alindato">Contact</a>
 												</td>
 											</tr>
 											<tr>
@@ -219,11 +232,11 @@
 													</span>
 												</td>
 												<td>Felipe Bilatan</td>
-												<td>Exp. 7+ Years</td>
-												<td>High Fluency</td>
+												<td>7+ Years</td>
+												<td>High</td>
 												<td>Philippines</td>
 												<td>
-													<a class="default-btn" href="mailto:sales@megapipelines.com">Contact</a>
+													<a class="default-btn" href="mailto:sales@megapipelines.com?subject=Dialing%20Support:%20Felipe%20Bilatan">Contact</a>
 												</td>
 											</tr>
 										</tbody>
