--- a/company.html
+++ b/company.html
@@ -101,6 +101,9 @@
  									<li class="nav-item">
 										<a href="verification-process.html" class="nav-link">Lead Verification</a>
 									</li>
+ 									<li class="nav-item">
+										<a href="roi-calculator.html" class="nav-link">ROI Calculator</a>
+									</li>
 								</ul>
 							</li>
 							<li class="nav-item">
@@ -108,7 +111,7 @@
 							</li>
 						</ul>
 						<div class="other-option">
-							<a class="default-btn" href="https://account.megapipelines.com/#/register">Register <span></span></a>
+							<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
 						</div>
 					</div>
 				</nav>
