--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
 						<h2>Unlimited, High Quality Sales Leads</h2>
 
 						<p>MegaPipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective cost (unlimited for a low monthly subscription cost).</p>
-
-						<p>Do the math yourself, or use our <a href="roi-calculator.html">ROI calculator</a> to help you see the potential.</p>
+						<br>
+						<p>Do the math yourself, or use our <a href="roi-calculator.html" style="text-decoration:underline;">ROI calculator</a> to help you see the potential.</p>
 
 						<div class="new-btn">
 
