--- a/pricing.html
+++ b/pricing.html
@@ -335,6 +335,14 @@
 
 			</div>
 
+			<div class="row space-top">
+				<div class="col-lg-12 col-md-12">
+					<h6>We do this for Unlimited Leads and since we offer this service on a flat cost per month, we made it easier than ever for you to grow your business.</h6>
+					<h4>No risk to start, get 50 free dials when you sign up your first Dialer.</h4>
+					<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
+				</div>
+			</div>
+
 		</div>
 
 	</section>
