--- a/industries.html
+++ b/industries.html
@@ -140,7 +140,7 @@
 
 			<div class="row space-bottom">
 				<div class="col-lg-12 col-md-12 text-center">
-					<h2>Here are Industries We Make <span class="color-text">Mega Pipelines Sales</span></h2>
+					<h2>Here are Industries We Make <span class="color-text">Mega Pipelines</span></h2>
 				</div>
 			</div>
 
@@ -340,7 +340,7 @@
 			<div class="row space-top">
 				<div class="col-lg-12 col-md-12">
 					<h6>We do this for Unlimited Leads and since we offer this service on a flat cost per month, we made it easier than ever for you to grow your business.</h6>
-					<h4>No risk to start, get 50 free dials for free just by signing up.</h4>
+					<h4>No risk to start, get 50 free dials when you sign up your first Dialer.</h4>
 					<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
 				</div>
 			</div>
