--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -142,12 +142,19 @@
 
 			<div class="row calculator">
 
+				<div class="col-lg-12 col-md-12">
+					<div>
+						<h2>ROI Calculator</h2>
+						<p>We came up with this ROI Calculator to help you visualize the impact of implementing a program with Mega Pipelines</p>
+						<p>Enter in the fields in the blue boxes below what your monthly return on investment will be by using.</p>
+						<p>Results vary based on your performance, and subscription costs are subject to change according to the <a target="_blank" href="terms-conditions.html">Terms and Conditions</a>.</p>
+					</div>
+				</div>
+
 				<div class="col-lg-6 col-md-12">
 
 					<div>
-					
-						<h2 class="text-info">ROI Calculator</h2>
-						<h5 class="border-bottom border-dark text-primary mt-4">Your Current Commission</h5>
+						<h5 class="border-bottom border-dark label-primary mt-4">Your Current Commission</h5>
 						<div class="row align-items-center" data-toggle="tooltip" data-placement="top" title="Enter your typical average funded loan month.">
 							<div class="col-lg-8">
 								<p>Current Deals Closed Per Month</p>
@@ -224,7 +231,7 @@
 					</div>
 
 					<div>
-						<h5 class="border-bottom border-dark text-primary mt-4">Mega Pipeline Stats You Expect</h5>
+						<h5 class="border-bottom border-dark label-primary mt-4">Mega Pipeline Stats You Expect</h5>
 						<div>
 							<div class="row align-items-center" data-toggle="tooltip" data-placement="top" title="Usually each Dialer can call between 80 and 200 leads per day.">
 								<div class="col-lg-8">
@@ -435,11 +442,11 @@
 
 				</div>
 
-				<div class="col-lg-6 col-md-12">
+				<div class="col-lg-6 col-md-12 roi-results">
 
 
 					<div>
-						<h5 class="border-bottom border-dark text-primary mt-4">Your New Commission Results</h5>
+						<h5 class="border-bottom border-dark label-primary mt-4">Your New Commission Results</h5>
 						<div>
 							<div class="row align-items-center">
 								<div class="col-lg-8">
@@ -467,18 +474,12 @@
 							</div>
 							<div class="row align-items-center">
 								<div class="col-lg-6">
-									<p>Ready to make your sales pipeline Mega?</p>
+									<p style="white-space: nowrap;"><b>Ready to make your sales pipeline Mega?</b></p>
 									<a href="https://account.megapipelines.com/#/register?program_id=14&trial_version=1" type="submit" class="default-btn">Try It Free <span></span></a>
 								</div>
 							</div>
 						</div>
 						
-					</div>
-
-					<div>
-						<p>We came up with this ROI Calculator to help you visualize the impact of implementing a program with Mega Pipelines</p>
-						<p>Enter in the fields in the blue boxes below what your monthly return on investment will be by using.</p>
-						<p>Results vary based on your performance, and subscription costs are subject to change according to the <a target="_blank" href="terms-conditions.html">Terms and Conditions</a>.</p>
 					</div>
 
 				</div>
