--- a/index.html
+++ b/index.html
@@ -170,7 +170,14 @@
 
 							<div class="banner-image">
 
-								<img src="assets/img/home-font.png" alt="image">
+								<lottie-player
+									src="assets/img/lottie_2.json"
+									background="transparent"
+									speed="1"
+									style="width: 600px; height: 550px;"
+									loop
+									autoplay>
+								</lottie-player>
 
 							</div>
 
