--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							<div class="banner-image">
 
 								<lottie-player
-									src="assets/img/video_lottie_3.json"
+									src="assets/img/Pre-comp 2.json"
 									background="transparent"
 									speed="1"
 									style="width: 600px; height: 550px;"
