--- a/index.html
+++ b/index.html
@@ -145,22 +145,18 @@
 								<div class="banner-btn">
 
 									<a href="product.html" class="default-btn-one">
-
                                         Learn More
-
-                                        <span></span>
-
                                     </a>
 
 									<a class="default-btn" href="registration.html">
-
                                         Try It Free
-
-                                        <span></span>
-
                                     </a>
 
 								</div>
+
+								<p>
+									<small><b>No risk to start, get 50 free dials when you sign up your first Dialer.</b></small>
+								</p>
 
 							</div>
 
@@ -170,15 +166,18 @@
 
 							<div class="banner-image">
 
+								<img src="assets/img/home-font.png" alt="image">
+
+<!--
 								<lottie-player
-									src="assets/img/Pre-comp 2.json"
+									src="assets/img/customer-need.json"
 									background="transparent"
 									speed="1"
-									style="width: 600px; height: 550px;"
+									style="width: 400px; height: 400px;"
 									loop
 									autoplay>
 								</lottie-player>
-
+-->
 							</div>
 
                         </div>
@@ -223,7 +222,7 @@
 
 						<div class="services-btn-link">
 
-							<a href="verification-process.html" class="services-link">Learn about our verification process</a>
+							<a href="verification-process.html" class="services-link">Our Lead Verification Process</a>
 
 						</div>
 
@@ -247,7 +246,7 @@
 
 						<div class="services-btn-link">
 
-							<a href="integrated-dialer.html" class="services-link">Learn about our integrated dialer</a>
+							<a href="integrated-dialer.html" class="services-link">Our Integrated Dialer</a>
 
 						</div>
 
@@ -267,11 +266,11 @@
 
 						<h3>Low Cost Per Month</h3>
 
-						<p>You cannot find a better quality program to grow your business.</p>
+						<p>You cannot find a better quality program at this price to grow your business.</p>
 
 						<div class="services-btn-link">
 
-							<a href="pricing.html" class="services-link">Learn about our Pricing Plans</a>
+							<a href="pricing.html" class="services-link">Our Pricing Plans</a>
 
 						</div>
 
@@ -301,7 +300,7 @@
 
 					<div class="overview-content">
 
-						<h2>Industries We Enable Sales Success</h2>
+						<h2>Industries We <span class="label-primary">Enable Sales Success</span></h2>
 
 						<p>These are the industries that Mega Pipelines provides incredible access to high quality sales leads.</p>
 
@@ -400,12 +399,15 @@
 
 					<div class="overview-content">
 
-						<h2>Unlimited, High Quality Sales Leads</h2>
+						<h2>Unlimited, <span class="dummy-link">High Quality</span> Sales Leads</h2>
 
-						<p>MegaPipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective cost (unlimited for a low monthly subscription cost).</p>
+						<p>MegaPipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective price (unlimited for a low monthly subscription cost).</p>
 						<br>
-						<p>Do the math yourself, or use our <a href="roi-calculator.html" style="text-decoration:underline;">ROI calculator</a> to help you see the potential.</p>
-
+						<p>Do the math yourself, or use our <a class="dummy-link" href="roi-calculator.html">ROI calculator</a> to help you see the potential.</p>
+						<br>
+						<p>
+							<span>No Risk to Start. Get Free 50 Dials Upon Registration.</span>
+						</p>
 						<div class="new-btn">
 
 							<a class="default-btn" href="https://account.megapipelines.com/#/register">Try It Free <span></span></a>
@@ -898,7 +900,7 @@
 
 						<h2>Have more questions about growing your sales?</h2>
 
-						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+						<p>Contact us and one of our talented Pipeline Growth Analysts will contact you to help you get started.</p>
 
 						<div class="hire-btn">
 
@@ -1176,7 +1178,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
