--- a/industries.html
+++ b/industries.html
@@ -364,7 +364,7 @@
 
 						<h2>Have more questions about growing your sales?</h2>
 
-						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+						<p>Contact us and one of our talented Pipeline Growth Analysts will contact you to help you get started.</p>
 
 						<div class="hire-btn">
 
@@ -390,7 +390,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
