--- a/pricing.html
+++ b/pricing.html
@@ -290,11 +290,11 @@
 								<h3>Enterprise Plan</h3>
 
 								<h2 class="total-price"></h2>
-								<span class="price-small-text">Contact our sales team</span>
+								<span class="price-small-text">Contact a Pipeline Growth Analyst</span>
 							</div>
 
 							<div class="price-description">
-								<p>Big and Betting to be Better</p>
+								<p>Big Biz and Betting to be Better</p>
 							</div>
 
 						</div>
@@ -359,7 +359,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
