--- a/product.html
+++ b/product.html
@@ -157,7 +157,7 @@
 							<p>We curate leads from a number of different sources and then validate them using public records, telephony verification and then we scrub it against Do Not Call and other blacklists and known litigators.</p> 
 							<p>We have designed the system so you can stay TCPA compliant.</p>
 							<p>We load leads constantly into Mega Pipelines as soon as we refined them via our lead curation process.</p>
-							<p>Read about our <a href="verification-process.html">Verification Process</a></p>
+							<p>Read about our <a class="dummy-link" href="verification-process.html">Verification Process</a></p>
 
 						</div>
 
@@ -198,7 +198,7 @@
 							<h2>We Set You Up For <span class="color-text">Success</span></h2>
 							<p>We are telephony tech experts at heart.  We set you up with a phone number that we constantly evaluate to reassure it doesn’t get marked as a spam caller.</p> 
 							<p>You filter through the leads and focus on the geographic areas, products and specializations that you serve the best.</p>
-							<p>More questions, read our <a href="faq.html">FAQs</a></p>
+							<p>More questions, read our <a class="dummy-link" href="faq.html">FAQs</a></p>
 
 						</div>
 
@@ -220,7 +220,7 @@
 
 							<p>You start calling with confidence, with no need to set up Dialers, or hope that the lead information is accurate.</p>
 							<p>You win business.</p>
-							<p>See what <a style="text-decoration: underline;" href="industries.html">industries we create success</a></p>
+							<p>See what <a class="dummy-link" href="industries.html">industries we create success</a></p>
 
 						</div>
 
@@ -268,7 +268,7 @@
 
 						<h2>Have more questions about growing your sales?</h2>
 
-						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+						<p>Contact us and one of our talented Pipeline Growth Analysts will contact you to help you get started.</p>
 
 						<div class="hire-btn">
 
@@ -294,7 +294,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
