--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -144,7 +144,7 @@
 
 				<div class="col-lg-12 col-md-12">
 					<div>
-						<h2>ROI Calculator</h2>
+						<h2 class="dummy-link">ROI Calculator</h2>
 						<p>We came up with this ROI Calculator to help you visualize the impact of implementing a program with Mega Pipelines</p>
 						<p>Enter in the fields in the blue boxes below what your monthly return on investment will be by using.</p>
 						<p>Results vary based on your performance, and subscription costs are subject to change according to the <a target="_blank" href="terms-conditions.html">Terms and Conditions</a>.</p>
@@ -503,7 +503,7 @@
 
 						<h2>Have more questions about growing your sales?</h2>
 
-						<p>Contact us and one of our talented pipeline growth analysts will contact you to help you get started.</p>
+						<p>Contact us and one of our talented Pipeline Growth Analysts will contact you to help you get started.</p>
 
 						<div class="hire-btn">
 
@@ -529,7 +529,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
