--- a/solar.html
+++ b/solar.html
@@ -207,7 +207,7 @@
 						<div class="footer-heading">
 							<h3>About Us</h3>
 						</div>
-						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your marketing budget.</p>
+						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
 								<a href="#"><i class="fab fa-facebook-f"></i></a>
