New social links

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mortgage, leads, unlimited, refinance, solar, sales, loans, pipeline">
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="https://megapipelines.com/assets/img/favicon.png">
     <title>404 - Page Not Found</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
@@ -51,13 +51,13 @@
 			height: 300px;
 		}
     </style>
-	<link rel="stylesheet" href="assets/css/style.css">
-	<link rel="stylesheet" href="assets/css/responsive.css">
+	<link rel="stylesheet" href="https://megapipelines.com/assets/css/style.css">
+	<link rel="stylesheet" href="https://megapipelines.com/assets/css/responsive.css">
 <body>
 	<div class="error">
-		<img src="assets/img/404.svg">
+		<img src="https://megapipelines.com/assets/img/404.svg">
 		<h2>Page Not Found</h2>
-		<p>sorry, the page you're searching for doesn't exist</p>
+		<p>Sorry, the page you're searching for doesn't exist.</p>
 		<a class="default-btn" href="/">Go Home</a>
 	</div>
 </body>
