--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Mega Pipelines</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Mega Pipelines">
-    <meta property="og:title" content="Unlimited Sales Leads to Boost Lead Generation">
+    <meta property="og:site_name" content="Mega Pipelines - Unlimited Sales Leads">
+    <meta property="og:title" content="Mega Pipelines">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <meta property="og:image" content="">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
 			<div class="container">
 				<div class="techmax-responsive-menu">
 					<div class="logo">
-						<a href="index.html">
+						<a href="/">
 							<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 						</a>
@@ -65,7 +65,7 @@
 		<div class="techmax-nav index-navber">
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="/">
 						<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 						<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 					</a>
@@ -155,7 +155,7 @@
 								</div>
 
 								<p>
-									<small><b>No risk to start, get 50 free dials when you sign up your first Dialer.</b></small>
+									<b>No risk to start, get 50 free dials when you sign up your first Dialer.</b>
 								</p>
 
 							</div>
@@ -300,7 +300,7 @@
 
 					<div class="overview-content">
 
-						<h2>Industries We <span class="label-primary">Enable Sales Success</span></h2>
+						<h2>Industries We <span class="dummy-link">Enable Sales Success</span></h2>
 
 						<p>These are the industries that Mega Pipelines provides incredible access to high quality sales leads.</p>
 
@@ -401,7 +401,7 @@
 
 						<h2>Unlimited, <span class="dummy-link">High Quality</span> Sales Leads</h2>
 
-						<p>MegaPipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective price (unlimited for a low monthly subscription cost).</p>
+						<p>Mega Pipelines is the only sales utility that combines opt in internet leads, scrubbed against the DNC, verified for true homeownership, verified phone number ownership, and with an embedded dialing system–available at the most effective price (unlimited for a low monthly subscription cost).</p>
 						<br>
 						<p>Do the math yourself, or use our <a class="dummy-link" href="roi-calculator.html">ROI calculator</a> to help you see the potential.</p>
 						<br>
@@ -1181,16 +1181,16 @@
 						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-linkedin"></i></a>
+								<a target="_blank" href="https://linkedin.com/company/mega-pipelines/"><i class="fab fa-linkedin"></i></a>
 							</li>
 						</ul>
 					</div>
