--- a/pricing.html
+++ b/pricing.html
@@ -53,7 +53,7 @@
 			<div class="container">
 				<div class="techmax-responsive-menu">
 					<div class="logo">
-						<a href="index.html">
+						<a href="/">
 							<img src="assets/img/logo.svg" class="white-logo" alt="logo">
 							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 						</a>
@@ -66,7 +66,7 @@
 			<div class="container">
 				<div class="techmax-responsive-menu">
 					<div class="logo">
-						<a href="index.html">
+						<a href="/">
 							<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 							<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 						</a>
@@ -77,7 +77,7 @@
 		<div class="techmax-nav index-navber">
 			<div class="container">
 				<nav class="navbar navbar-expand-md navbar-light">
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="/">
 						<img src="assets/img/logo-black.svg" class="white-logo" alt="logo">
 						<img src="assets/img/logo-black.svg" class="black-logo" alt="logo">
 					</a>
@@ -139,7 +139,7 @@
 					<div class="page-title-content">
 						<h2>Pricing Plans</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<li>Pricing Plans</li>
 						</ul>
 					</div>
@@ -362,16 +362,16 @@
 						<p>Mega Pipelines is your extraordinary partner to help you grow your sales pipeline without growing your lead budget.</p>
 						<ul class="footer-social">
 							<li>
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-twitter"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-instagram"></i></a>
+								<a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="fab fa-linkedin"></i></a>
+								<a target="_blank" href="https://linkedin.com/company/mega-pipelines/"><i class="fab fa-linkedin"></i></a>
 							</li>
 						</ul>
 					</div>
