--- a/index.html
+++ b/index.html
@@ -166,18 +166,15 @@
 
 							<div class="banner-image">
 
-								<img src="assets/img/home-font.png" alt="image">
-
-<!--
 								<lottie-player
-									src="assets/img/customer-need.json"
+									src="assets/img/animation_1.json"
 									background="transparent"
 									speed="1"
-									style="width: 400px; height: 400px;"
+									style="width: 600px; height: 600px;"
 									loop
 									autoplay>
 								</lottie-player>
--->
+
 							</div>
 
                         </div>
