--- a/faq.html
+++ b/faq.html
@@ -9,13 +9,14 @@
     <meta name="description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
     <link rel="canonical" href="https://megapipelines.com/">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
+<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
     <title>FAQs</title>
     <meta property="og:url" content="https://megapipelines.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Mega Pipelines">
     <meta property="og:title" content="FAQs">
     <meta property="og:description" content="Mega Pipelines is the best sales resource, providing unlimited sales leads for mortgage, solar, insurance and home services.  Why pay per opportunity when you can have unlimited sales at your fingertips.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://megapipelines.com/assets/img/thumbnail.png">
 	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/animate.min.css">
@@ -434,7 +435,7 @@
 								<a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li>
-								<a target="_blank" href="#"><i class="fab fa-instagram"></i></a>
+								<a target="_blank" href="https://www.instagram.com/megapipelines/"><i class="fab fa-instagram"></i></a>
 							</li>
 							<li>
 								<a target="_blank" href="https://linkedin.com/company/mega-pipelines/"><i class="fab fa-linkedin"></i></a>
