--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
 
 							<div class="banner-image">
 
+								<img src="assets/img/choose-1.png">
+
+<!--
 								<lottie-player
 									src="assets/img/animation_2.json"
 									background="transparent"
@@ -175,7 +178,7 @@
 									loop
 									autoplay>
 								</lottie-player>
-
+-->
 							</div>
 
                         </div>
